--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
             <div class="cells-board">
                 <!-- Кнопки ячеек -->
                 <button id="cellButton" type="button" class="cell">
-                    <img width="56" height="56" src="output_svgs/image_5450.svg">
+                    <img src="./output_svgs/image_5450.svg" alt="Star">
                 </button>
                 <button id="cellButton" type="button" class="cell">
-                    <img width="56" height="56" src="output_svgs/image_11641.svg">
+                    <img src="./output_svgs/image_11641.svg" alt="Star">
+
                 </button>
                 <button id="cellButton" type="button" class="cell">
-                    <img width="56" height="56" src="output_svgs/image_18337.svg">
+                    <img src="./output_svgs/image_18337.svg" alt="Star">
                 </button>
                 <!-- Остальные кнопки... -->
                 <div class="cells-board-mask">
